--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/types": "^7.28.2",
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -24,5 +26,18 @@
     "globals": "^16.2.0",
     "prettier": "3.6.2",
     "vite": "^7.1.4"
-  }
+  },
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Heather813903/todo-list.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Heather813903/todo-list/issues"
+  },
+  "homepage": "https://github.com/Heather813903/todo-list#readme",
+  "description": ""
 }
